--- a/eldritch.css
+++ b/eldritch.css
@@ -6,3 +6,10 @@
   color: #37f499 !important;
   font-weight: bold;
 }
+
+.tab.active .tab-header .favicon:not(.svg) {
+  filter: drop-shadow(1px 0 0 rgba(4, 209, 249, 0.75))
+    drop-shadow(-1px 0 0 rgba(4, 209, 249, 0.75))
+    drop-shadow(0 1px 0 rgba(4, 209, 249, 0.75))
+    drop-shadow(0 -1px 0 rgba(4, 209, 249, 0.75)) !important;
+}
