--- a/eldritch.css
+++ b/eldritch.css
@@ -5,7 +5,9 @@ TABS
 .tab-header {
   padding-top: 5px;
   color: #04d1f9;
+  padding-bottom: 5px;
 }
+
 /* active tab text */
 .tab.active .tab-header {
   color: #37f499 !important;
@@ -16,22 +18,36 @@ TABS
 }
 /* All tabs */
 #tabs-container .tab {
-  border-width: 1px 1px 1px 1px;
+  border-width: 1px 1px 1px 2px !important;
   border-style: solid;
   border-color: rgb(0, 255, 255, 0.25);
-  border-bottom-color: rgba(55, 244, 153, 0.25);
-  border-top-color: transparent;
+  border-left-color: rgba(55, 244, 153, 0.25);
+  /* border-top-color: transparent; */
 }
 /* Active tab */
 #tabs-container .tab.active {
-  border-width: 1px 1px 1px 1px;
+  border-width: 1px 1px 1px 4px !important;
   border-color: rgb(0, 255, 255);
-  border-bottom-color: #37f499;
+  border-left-color: #37f499;
 }
 #tabs-subcontainer .tab.active .tab-header {
   padding-left: 5px !important;
   padding-top: 5px !important;
   padding-bottom: 5px !important;
+}
+/* Pinned tabs */
+.tab .pinned .favicon:before {
+  content: "📌";
+  font-size: 10px;
+  position: absolute;
+  top: 8px;
+  left: -1px;
+  z-index: 1;
+}
+#tabs-tabbar-container .separator hr {
+  border-color: rgb(0, 255, 255) !important;
+  opacity: unset;
+  border-left-color: #37f499;
 }
 /* Hibernated Tabs */
 #tabs-container .tab.isdiscarded .favicon:before {
@@ -43,12 +59,12 @@ TABS
   z-index: 1;
   background-image: linear-gradient(
     0deg,
-    hsla(355.94, 82.61%, 68.43%, 0.75),
-    hsla(355.94, 82.61%, 68.43%, 0.75)
+    hsla(355.94, 82.61%, 68.43%, 0.35),
+    hsla(355.94, 82.61%, 68.43%, 0.35)
   );
   width: 18px;
   padding-left: 3px;
-  color: #ffffff;
+  color: #ebfafa;
   font-weight: bold;
 }
 #tabs-container .tab.tab-group.isdiscarded .favicon:before {
@@ -59,6 +75,10 @@ TABS
 #tabs-container .tab.isdiscarded:hover .favicon {
   filter: none !important;
 }
+/* background for tab bar */
+#tabs-tabbar-container {
+  background-color: #292e42 !important;
+}
 /*
 END OF TABS
 */
@@ -68,7 +88,43 @@ END OF TABS
   box-shadow: none !important;
 }
 
+/* TOOLBAR */
 /* affects all toolbar buttons */
 .ToolbarButton-Button {
   color: #04d1f9 !important;
+}
+.button-toolbar button:hover {
+  background-color: #323449 !important;
+  border-color: rgb(0, 255, 255);
+  border-bottom-color: #37f499 !important;
+  border-width: 1px 1px 2px 1px !important;
+  border-style: solid;
+  border-radius: 5px !important;
+}
+.toolbar-extensions .button-toolbar button:hover {
+  background-color: #323449 !important;
+  border-color: rgb(0, 255, 255);
+  border-bottom-color: #37f499 !important;
+  border-width: 1px 1px 2px 1px !important;
+  border-style: solid;
+  border-radius: 5px !important;
+}
+.bookmark-bar {
+  background-color: #292e42 !important;
+}
+.bookmark-bar button {
+  background-color: #292e42 !important;
+}
+.bookmark-bar button:hover {
+  background-color: #323449 !important;
+  border-color: rgb(0, 255, 255);
+  border-bottom-color: #37f499 !important;
+  border-width: 1px 1px 2px 1px !important;
+  border-style: solid;
+  border-radius: 5px !important;
+}
+
+/* SIDE PANEL */
+#panels-container.left .panel {
+  background-color: #171928 !important;
 }
